Fix: overflow aded to table on high score, data hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -808,6 +808,7 @@ border:2px solid red;
 overflow: hidden;
 }
 .ten{
+  overflow: hidden;
 width:15%;
 }
 .thirty{
